week1/image-service/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: files-claim
      containers:
        - name: image-service
          image: juslesan/main-image
          volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/files
